[package]
name = "ogmo3"
description = "A Rust crate for reading and writing Ogmo Editor 3 projects and levels"
version = "0.1.1"
authors = ["Joe Clay <27cupsofcoffee@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/17cupsofcoffee/ogmo3"
documentation = "https://docs.rs/ogmo3"
readme = "README.md"
keywords = ["game", "gamedev", "map", "ogmo", "level"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] } 
serde_json = "1.0.58"
serde_repr = "0.1"
hashbrown = { version = "0.11", features = ["serde"] }
either = "1.6.1"

[dev-dependencies]
tetra = "0.6"
anyhow = "1.0"
pretty_assertions = "0.7.2"

# This is required to make pretty_assertions run at a reasonable speed:
[profile.dev.package.difference]
opt-level = 3